<resources>
    <string name="app_name">WhatsAppClone!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp_world_emoji_image">Whatsapp World Emoji Image</string>
    <string name="welcome_to_whatsapp"><b>Welcome to Whatsapp</b></string>
    <string name="read_our_privacy">Read our <font color="#0C42CC">Privacy Policy</font>. Tap “Agree and continue” to \naccept the Teams of Service.</string>
    <string name="agree_and_continue">AGREE AND CONTINUE</string>
    <string name="from_facebook_iv">from facebook imageview</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="whatsapp_will_need_to_verify">WhatsApp will need to verify your phone number. <font color="#0C42CC">What’s \nmy number?</font></string>
    <string name="_91"><font color="#000" ><u>+91</u></font></string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string-array name="country_codes_array">
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
        <item>China</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
</resources>