<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.onboarding.WelcomeFragment">

    <TextView
        android:id="@+id/welcomeToWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_to_whatsapp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/whatsappWorld"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/whatsapp_world_emoji_image"
        android:src="@drawable/whatsapp_world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeToWhatsapp" />

    <TextView
        android:id="@+id/termsAndCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/read_our_privacy"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/whatsappWorld" />

    <Button
        android:id="@+id/agreeAndContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/agree_and_continue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/termsAndCondition" />

    <ImageView
        android:id="@+id/fromFacebook"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/from_facebook_iv"
        android:src="@drawable/from_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agreeAndContinue"
        app:layout_constraintVertical_bias="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>