<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.onboarding.MobileNumberFragment">

    <TextView
        android:id="@+id/enterPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enter_your_phone_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termsAndCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/whatsapp_will_need_to_verify"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneNumber" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/country_codes_array"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/termsAndCondition" />

    <TextView
        android:id="@+id/countryCodeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/_91"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/mobileNumberEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

    <EditText
        android:id="@+id/mobileNumberEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countryCodeTv"
        app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>